assets/css/base.module.css
.site-navigation {
  padding: 20px 0;
  background: transparent;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 99;
  transition: all 0.3s cubic-bezier(0.55, 0.085, 0.68, 0.53);
}

@media (max-width: 991px) {
  .site-navigation {
    background: #000;
    margin: 10px;
    border-radius: 5px;
    top: 0;
    width: calc(100% - 20px);
    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.09);
  }
}

@media (max-width: 575px) {
  .site-navigation {
    padding: 15px;
  }
}

.site-navigation .navbar-brand {
  padding: 0;
  margin: 0;
}

.logo {
  width: 150px;
  height: auto;
}

@media (max-width: 991px) {
  .site-navigation .nav-item {
    text-align: center;
  }

  .logo {
    width: 150px;
    height: auto;
  }
}

.site-navigation .nav-item .nav-link {
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  color: #fff;
  transition: all 0.3s ease;
  padding: 15px 18px;
  position: relative;
}

.site-navigation .nav-item .nav-link:hover {
  color: var(--secondary-color);
}

.site-navigation .nav-item:last-child {
  margin-left: 15px;
}

.site-navigation .navbar-toggler {
  outline: 0;
  padding: 0;
}

.site-navigation .navbar-toggler .icon-bar {
  height: 2px;
  width: 25px;
  transition: all 0.2s;
  background: #fff;
  display: block;
}

.site-navigation .navbar-toggler .icon-bar:not(:last-child) {
  margin-bottom: 5px;
}

.site-navigation .navbar-toggler .icon-bar:nth-child(1) {
  transform: rotate(45deg);
  transform-origin: 10% 10%;
}

.site-navigation .navbar-toggler .icon-bar:nth-child(2) {
  opacity: 0;
  filter: alpha(opacity=0);
}

.site-navigation .navbar-toggler .icon-bar:nth-child(3) {
  transform: rotate(-45deg);
  transform-origin: 10% 90%;
}

.site-navigation .navbar-toggler.collapsed .icon-bar:nth-child(1) {
  transform: rotate(0);
}

.site-navigation .navbar-toggler.collapsed .icon-bar:nth-child(2) {
  opacity: 1;
  filter: alpha(opacity=1);
}

.site-navigation .navbar-toggler.collapsed .icon-bar:nth-child(3) {
  transform: rotate(0);
}

.site-navigation.nav-bg {
  padding: 12px 0;
  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.09);
}

.navbar-nav {
  align-items: center;
}

@media (max-width: 575px) {
  .site-navigation.nav-bg {
    padding: 15px;
  }
}

.site-footer {
  padding: 100px 0;
}

.site-footer-logo {
  width: 175px;
  align-self: flex-end;
}

@media (max-width: 575px) {
  .site-footer-logo {
    text-align: center;
  }
}

@media (max-width: 991px) {
  .site-footer-widget {
    margin-bottom: 40px;
  }
}

@media (max-width: 575px) {
  .site-footer-widget {
    text-align: center;
  }
}

.site-footer-widget-title {
  color: #fff;
  margin-bottom: 30px;
}

@media (max-width: 991px) {
  .site-footer-widget-title {
    margin-bottom: 20px;
  }
}

.site-footer-widget-description {
  color: #fff;
  line-height: 30px;
}

.site-footer-widget-description a {
  color: #fff;
}

.site-footer-widget-links {
  margin: 0;
  padding: 0;
}

.site-footer-widget-links li {
  list-style: none;
}

.site-footer-widget-links li a {
  color: #fff;
  transition: all 0.3s cubic-bezier(0.36, 0.03, 0, 0.91);
  display: block;
}

.site-footer-widget-links li:not(:last-child) a {
  padding-bottom: 9px;
}

.site-footer-widget-top {
  display: flex;
  align-self: start;
  padding: 0;
  margin: 0;
}

.site-footer-widget-top-text {
  padding: 16px;
}

@media (max-width: 575px) {
  .site-footer-widget-top {
    text-align: center;
    display: block;
  }
}

.site-footer-copyright p {
  color: #fff;
  margin: 50px auto 0;
  text-align: center;
  margin-top: 100px;
}

.nav-item {
  position: relative;
}

.submenu {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: rgb(9, 9, 9);
  border: 1px solid #242424;
  border-radius: 5px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  min-width: 280px;
  padding: 0;
  z-index: 1000;
}

.nav-item:last-child .submenu {
  left: auto;
  right: 0;
}

.submenu-list-item {
  display: flex;
  list-style: none;
  padding: 8px 15px;
  font-weight: 600;
  border: 0.5px solid #242424;
  border-radius: 5px;
}

.sublink {
  text-decoration: none;
  color: #fff;
  display: block;
  padding: 8px 15px;
  transition: background 0.3s ease;
}

.sublink:hover {
  text-decoration: none;
  color: #fff;
}

.submenu-list-item:hover {
  background-color: var(--secondary-color);
}

.nav-item:hover>.submenu {
  display: block;
}

.prefooter-section {
  background: linear-gradient(135deg, #1e3c72, #2a5298);
  color: white;
  text-align: center;
  border-radius: 10px;
  margin: 120px 0;
  height: 500px;
  align-content: center;
  padding: 0;
}

.prefooter-content {
  position: relative;
}

.prefooter-title {
  letter-spacing: -2px;
  margin-bottom: 20px;
  font-weight: bold;
  color: #fff
}

.prefooter-subtitle {
  font-size: 18px;
  margin-bottom: 30px;
}

@media (max-width: 575px) {
  .prefooter-content {
    max-width: 280px;
    text-align: center;
    align-self: center;
    justify-self: center;
  }

  .prefooter-title {
    font-size: 40px;
  }
}

